# Concourse

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CODING_STANDARDS.md  CONTRIBUTING.md  MEMORY.md  README.md  ROADMAP.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml
artifacts/: logic-foundations-1.0.0.learntpack
content/logic-foundations/: course.test.ts  course.ts
courses/logic-foundations/: README.md  catalog.json  courses.json  items.json  (+4 more)
docs/: application-facade.md  architecture.md  concept-exploration.md  flashcards-quizzes-and-packs.md  learner-profile.md  learning-engine.md  persistence.md  session-recap.md  subject-authoring.md  user-interface.md  vocabulary.md
scripts/: build-logic-foundations-pack.ts  export-learning-pack.ts  verify-clean-clone.ps1  website-activities.test.mjs  website-assets.test.mjs  website-demo.test.mjs  website-document.test.mjs  website-modes.test.mjs  website-runtime.test.mjs  website-storage.test.mjs  website-styles.test.mjs
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: atomic_file.rs  atomic_json.rs  lib.rs  main.rs  pack_asset.rs
src-tauri/tests/: pack_asset_convergence.rs
website/: demo-activities.js  demo-content.js  demo-course-data.json  demo-course.js  demo-model.js  demo-modes.js  demo-pack.js  demo-render.js  demo-routing.js  demo-storage.js  demo.css  index.html  main.js  styles.css
(+276 files in other folders)
